--- a/messaging/messaging.html
+++ b/messaging/messaging.html
@@ -5,32 +5,160 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messagerie Privée</title>
     <style>
-        body { font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; }
-        #message-container { flex-grow: 1; padding: 10px; overflow-y: auto; border-bottom: 1px solid #ccc; }
-        .message { padding: 8px; border-radius: 5px; margin-bottom: 5px; background-color: #f0f0f0; }
-        .sent { background-color: #e0f7fa; align-self: flex-end; }
-        .received { background-color: #e8eaf6; align-self: flex-start; }
-        .sender-info { font-size: 0.8em; color: #777; margin-bottom: 2px; }
-        #input-area { display: flex; padding: 10px; align-items: center; }
-        #recipient-select { padding: 8px; border: 1px solid #ccc; border-radius: 5px; margin-right: 10px; }
-        #message-input { flex-grow: 1; padding: 8px; border: 1px solid #ccc; border-radius: 5px; margin-right: 10px; }
-        #send-button { padding: 8px 15px; border: none; border-radius: 5px; background-color: #007bff; color: white; cursor: pointer; }
-        #send-button:hover { background-color: #0056b3; }
-        #logout-link { display: block; text-align: center; margin-top: 10px; color: blue; text-decoration: none; }
-        #logout-link:hover { text-decoration: underline; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            background-color: #f4f6f8;
+            color: #333;
+        }
+
+        #logout-link {
+            display: block;
+            text-align: right;
+            padding: 10px 20px;
+            color: #007bff;
+            text-decoration: none;
+            border-bottom: 1px solid #e0e0e0;
+        }
+
+        #logout-link:hover {
+            text-decoration: underline;
+            background-color: #e9ecef;
+        }
+
+        .chat-container {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            padding: 20px;
+        }
+
+        #recipient-area {
+            margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+        }
+
+        label[for="recipient-select"] {
+            margin-right: 10px;
+            font-weight: bold;
+            color: #555;
+        }
+
+        #recipient-select {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            flex-grow: 1;
+            max-width: 300px;
+            font-size: 16px;
+            color: #333;
+        }
+
+        #message-container {
+            flex-grow: 1;
+            overflow-y: auto;
+            padding: 10px;
+            background-color: white;
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            margin-bottom: 15px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+            display: flex;
+            flex-direction: column;
+        }
+
+        .message {
+            padding: 10px 15px;
+            border-radius: 10px;
+            margin-bottom: 8px;
+            clear: both;
+            word-break: break-word;
+        }
+
+        .sent {
+            background-color: #DCF8C6;
+            align-self: flex-end;
+            color: #333;
+            border-bottom-right-radius: 0;
+        }
+
+        .received {
+            background-color: #E1F3FF;
+            align-self: flex-start;
+            color: #333;
+            border-bottom-left-radius: 0;
+        }
+
+        .sender-info {
+            font-size: 0.8em;
+            color: #777;
+            margin-bottom: 3px;
+        }
+
+        #input-area {
+            display: flex;
+            padding: 15px;
+            background-color: white;
+            border-top: 1px solid #e0e0e0;
+            border-radius: 0 0 8px 8px;
+            align-items: center;
+            box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.05);
+        }
+
+        #message-input {
+            flex-grow: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-right: 10px;
+            font-size: 16px;
+            color: #333;
+        }
+
+        #send-button {
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.2s ease;
+        }
+
+        #send-button:hover {
+            background-color: #0056b3;
+        }
+
+        #message-container.empty {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-style: italic;
+            color: #999;
+        }
     </style>
 </head>
 <body>
     <a id="logout-link" href="../index.html">Se déconnecter</a>
-    <label for="recipient-select">Envoyer à:</label>
-    <select id="recipient-select">
-        <option value="">Sélectionner un utilisateur</option>
-    </select>
-    <div id="message-container">
+    <div class="chat-container">
+        <div id="recipient-area">
+            <label for="recipient-select">Envoyer à:</label>
+            <select id="recipient-select">
+                <option value="">Sélectionner un utilisateur</option>
+            </select>
         </div>
-    <div id="input-area">
-        <input type="text" id="message-input" placeholder="Votre message">
-        <button id="send-button">Envoyer</button>
+        <div id="message-container" class="empty">
+            Sélectionnez un utilisateur pour afficher la conversation.
+        </div>
+        <div id="input-area">
+            <input type="text" id="message-input" placeholder="Votre message">
+            <button id="send-button">Envoyer</button>
+        </div>
     </div>
 
     <script>
@@ -44,6 +172,7 @@
         }
 
         let currentRecipient = null;
+        const messageContainer = document.getElementById('message-container');
 
         async function loadUsersForDropdown() {
             if (!await checkAuth()) return;
@@ -72,37 +201,49 @@
 
         async function loadMessages() {
             if (!await checkAuth()) return;
-            const messageContainer = document.getElementById('message-container');
             messageContainer.innerHTML = '';
+            messageContainer.classList.remove('empty');
             const sender = localStorage.getItem('username');
             if (currentRecipient) {
                 try {
                     const response = await fetch(`/api/messages?sender=${sender}&recipient=${currentRecipient}`);
                     if (response.ok) {
                         const messages = await response.json();
-                        messages.forEach(msg => {
-                            const div = document.createElement('div');
-                            div.classList.add('message');
-                            const senderInfo = document.createElement('div');
-                            senderInfo.classList.add('sender-info');
-                            senderInfo.textContent = msg.sender;
-                            div.appendChild(senderInfo);
-                            div.textContent += msg.text;
-                            if (msg.sender === sender) {
-                                div.classList.add('sent');
-                            } else {
-                                div.classList.add('received');
-                            }
-                            messageContainer.appendChild(div);
-                        });
+                        if (messages.length === 0) {
+                            messageContainer.classList.add('empty');
+                            messageContainer.textContent = 'Aucun message dans cette conversation.';
+                        } else {
+                            messages.forEach(msg => {
+                                const div = document.createElement('div');
+                                div.classList.add('message');
+                                const senderInfo = document.createElement('div');
+                                senderInfo.classList.add('sender-info');
+                                senderInfo.textContent = msg.sender;
+                                div.appendChild(senderInfo);
+                                div.appendChild(document.createTextNode(msg.text));
+                                if (msg.sender === sender) {
+                                    div.classList.add('sent');
+                                } else {
+                                    div.classList.add('received');
+                                }
+                                messageContainer.appendChild(div);
+                            });
+                            // Faire défiler vers le bas pour afficher les derniers messages
+                            messageContainer.scrollTop = messageContainer.scrollHeight;
+                        }
                     } else {
                         console.error("Erreur lors du chargement des messages");
+                        messageContainer.classList.add('empty');
+                        messageContainer.textContent = 'Erreur lors du chargement des messages.';
                     }
                 } catch (error) {
                     console.error("Erreur de réseau:", error);
+                    messageContainer.classList.add('empty');
+                    messageContainer.textContent = 'Erreur de réseau lors du chargement des messages.';
                 }
             } else {
-                messageContainer.textContent = 'Sélectionnez un destinataire pour afficher les messages.';
+                messageContainer.classList.add('empty');
+                messageContainer.textContent = 'Sélectionnez un destinataire pour afficher la conversation.';
             }
         }
 
@@ -145,6 +286,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             checkAuth();
             loadUsersForDropdown();
+            loadMessages(); // Charger initialement même sans destinataire sélectionné
             // Remplacer par WebSocket pour une application réelle
             setInterval(loadMessages, 3000);
         });
